--- a/scripts/upongd.service
+++ b/scripts/upongd.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 ExecStart=/usr/local/bin/upong
 PIDFile=/var/run/upongd.pid
-ExecStartPre=-/usr/bin/wget -O - --post-data=xkey=c79c2a46-728d-4694-87b9-670c42d9f87e&region=MY_PONG_REGION&cluster=MY_PONG_CLUSTER&rack=MY_PONG_RACK http://MASTER_WEBSERVER_HOST:5000/servers/create
-ExecStopPost=-/usr/bin/wget -O - --post-data=xkey=c79c2a46-728d-4694-87b9-670c42d9f87e&is_active=0 http://MASTER_WEBSERVER_HOST:5000/servers/update
+ExecStartPre=-/usr/bin/wget -O - --post-data=xkey=c79c2a46728d469487b9670c42d9f87e&region=MY_PONG_REGION&cluster=MY_PONG_CLUSTER&rack=MY_PONG_RACK http://MASTER_WEBSERVER_HOST:5000/v1/servers/create
+ExecStopPost=-/usr/bin/wget -O - --post-data=xkey=c79c2a46728d469487b9670c42d9f87e&is_active=0 http://MASTER_WEBSERVER_HOST:5000/v1/servers/update
 Type=simple
 User=root
 Group=root
